# hpc_project

./: README.md  compile_osu.sh  plot_results.py  run_osu.sh  run_tests.py
hpc_ex1/: plot_results.py  run_osu.sh  run_tests.py
hpc_ex2/: 2a.c  2c.c  CMakeLists.txt  compile.sh  cpu_plots.py  mand_helpers.py  mand_visualizer.py  plot_c.py  plot_m.py  run_tests_circ.py  run_tests_mand.py  test_c.sh  test_mand.sh
